[package]
name = "actix-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
futures-util = "0.3"
fireauth =  { git = "https://github.com/Apocentre/fireauth", version = "0.1.8" }
jsonwebtoken = {version = "8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
